--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -164,6 +164,10 @@ p.lead {
   }
 }
 
+.pipe {
+  color: #f22613 !important;
+}
+
 em, i, strong, b {
   font-size: inherit;
   line-height: inherit;
